--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Aaron Sikes",
   "license": "ISC",
   "dependencies": {
+    "array-matrix": "^1.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
